# lucene

./: .bazelrc  .bazelversion  .gitignore  BUILD.bazel  build.gradle
gradle/generation/: extract-jdk-apis.gradle
gradle/java/: core-mrjar.gradle  javac.gradle
gradle/testing/: defaults-tests.gradle
gradle/testing/randomization/policies/: tests.policy
gradle/validation/: check-environment.gradle
lucene/backward-codecs/src/java/org/apache/lucene/backward_codecs/lucene90/: Lucene90HnswGraphBuilder.java  Lucene90HnswVectorsReader.java  Lucene90OnHeapHnswGraph.java
lucene/backward-codecs/src/java/org/apache/lucene/backward_codecs/lucene91/: Lucene91HnswVectorsReader.java
lucene/backward-codecs/src/java/org/apache/lucene/backward_codecs/lucene92/: OffHeapFloatVectorValues.java
lucene/backward-codecs/src/java/org/apache/lucene/backward_codecs/lucene94/: OffHeapByteVectorValues.java  OffHeapFloatVectorValues.java
lucene/backward-codecs/src/test/org/apache/lucene/backward_codecs/lucene90/: Lucene90HnswVectorsWriter.java
lucene/backward-codecs/src/test/org/apache/lucene/backward_codecs/lucene91/: Lucene91HnswGraphBuilder.java  Lucene91HnswVectorsWriter.java
lucene/core/: build.gradle
lucene/core/src/java/: module-info.java
lucene/core/src/java/org/apache/lucene/: HnswTest.java
lucene/core/src/java/org/apache/lucene/codecs/: Codec.java  KnnVectorsReader.java  VamanaGraphProvider.java
lucene/core/src/java/org/apache/lucene/index/: FloatVectorValues.java  VectorSimilarityFunction.java
lucene/core/src/java/org/apache/lucene/search/: ExactKnnFloatVectorQuery.java  KnnCollector.java  TopKnnCollector.java
lucene/core/src/java/org/apache/lucene/store/: DataInput.java  IndexInput.java  MMapDirectory.java  MemorySegmentIndexInput.java  MemorySegmentIndexInputProvider.java
lucene/core/src/java/org/apache/lucene/util/: VectorUtil.java  VectorUtilPanamaProvider.java  VectorUtilProvider.java  Version.java
lucene/core/src/java21/org/apache/lucene/store/: MemorySegmentIndexInput.java
lucene/core/src/test/org/apache/lucene/util/: TestVectorUtilProviders.java
lucene/test-framework/src/java/: module-info.java
(+104 files in other folders)
